add box-4 to box-6

--- a/flex.html
+++ b/flex.html
@@ -124,13 +124,13 @@
             <span class="item"></span>
         </div>
         <div class="box double-box23">
-                <span class="item"></span>
-                <span class="item"></span>
-            </div>
-            <div class="box double-box24">
-                <span class="item"></span>
-                <span class="item"></span>
-            </div>
+            <span class="item"></span>
+            <span class="item"></span>
+        </div>
+        <div class="box double-box24">
+            <span class="item"></span>
+            <span class="item"></span>
+        </div>
     </div>
 
     <div class="container">
@@ -167,43 +167,59 @@
     </div>
 
     <div class="container">
-            <div class="box four-box1">
-                <span class="item"></span>
-                <span class="item"></span>
-                <span class="item"></span>
-                <span class="item"></span>
-            </div>
-            <div class="box four-box2">
-                <span class="item"></span>
-                <span class="item"></span>
-                <span class="item"></span>
-                <span class="item"></span>
-            </div>
-            <div class="box four-box3">
-                <span class="item"></span>
-                <span class="item"></span>
+        <div class="box four-box1">
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
+        </div>
+
+        <div class="box four-box2">
+            <div class="column">
                 <span class="item"></span>
                 <span class="item"></span>
             </div>
-            <div class="box four-box4">
-                <span class="item"></span>
-                <span class="item"></span>
-                <span class="item"></span>
-                <span class="item"></span>
-            </div>
-            <div class="box four-box5">
-                <span class="item"></span>
-                <span class="item"></span>
-                <span class="item"></span>
-                <span class="item"></span>
-            </div>
-            <div class="box four-box6">
-                <span class="item"></span>
-                <span class="item"></span>
+            <div class="column">
                 <span class="item"></span>
                 <span class="item"></span>
             </div>
         </div>
+    </div>
+
+    <div class="container">
+        <div class="box six-box1">
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
+        </div>
+        <div class="box six-box2">
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
+            <span class="item"></span>
+        </div>
+        <div class="box six-box3">
+            <div class="row">
+                <span class="item"></span>
+                <span class="item"></span>
+                <span class="item"></span>
+            </div>
+            <div class="row">
+                <span class="item"></span>
+            </div>
+            <div class="row">
+                <span class="item"></span>
+                <span class="item"></span>
+            </div>
+        </div>
+
+    </div>
+
 </body>
 
 </html>
